# winLog

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: Compiler.cmake  Defaults.cmake
cmake/modules/: FindMessageCompiler.cmake
tests/: CMakeLists.txt
tests/test1/: CMakeLists.txt  main.cpp  win32api.hpp  window.cpp  window.hpp
tests/test2/: CMakeLists.txt  main.cpp
tests/test3/: main.py  requirements.txt
